fix word-break in comments

--- a/eqdkp_swtor.css
+++ b/eqdkp_swtor.css
@@ -2384,7 +2384,7 @@ div.error { display: none; }
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	margin-left: 130px;
-	word-break: break-all;
+	word-break: break-word;
 	color: #555;
 }
 
